--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
+<h1>My Second Heading</h1>
+<p>My second paragraph.</p>
+ 
+<h1>My third Heading</h1>
+<p>My third paragraph.</p>
+ 
 </body>
 </html> 
